# SCVMiner

./: .gitignore  AGENTS.md  LICENSE  README.md  gsc.py  main.py  pyproject.toml
datasets/: README.md
gnn/: gnn_test.py  lgan.py
gsc_tests/: gsc_test.py
gsc_tests/contracts/: Legacy0424.sol  MixedKinds.sol  NoPragma.sol  SimpleCall.sol
models/: solidity_word2vec_stats.json
scg/: README.md  __init__.py  generate_dataset_graphs.py  gsc.py  gsc_test.py  log.txt  nre_word2vec.py  nre_word2vec_test.py  scg.py  scg_test.py
