[project]
name = "scvminer"
version = "0.1.0"
description = "A Python project managed with uv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dgl>=2.2.1",
    "gensim>=4.3.3",
    "numpy>=1.26,<2",
    "pyyaml>=6.0.3",
    "slither-analyzer>=0.11.5",
    "torch==2.2.2",
    "torchdata==0.7.1",
]
